add function setColor to highlight repairStatus

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="固定资产管理系统">
-	<meta name="author" content="Łukasz Holeczek">
+  <meta name="description" content="报修系统">
+	<meta name="author" content="CZQY">
 	<meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,Angular 2,Angular4,Angular 4,jQuery,CSS,HTML,RWD,Dashboard,React,React.js,Vue,Vue.js">
 	<link rel="shortcut icon" href="assets/img/favicon.png">
-	<title>固定资产管理系统</title>
+	<title>报修系统</title>
 </head>
 
 <!-- BODY options, add following classes to body to change options
